Services/02-dns.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unbound
  namespace: pihole
  labels:
    app: unbound
spec:
  serviceName: "unbound"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      containers:
        - name: unbound
          image: docker.io/mvance/unbound-rpi:latest
          ports:
            - name: svc-53-udp
              containerPort: 53
              protocol: UDP
            - name: svc-53-tcp
              containerPort: 53
              protocol: TCP
          resources:
            limits:
              memory: "300Mi"
              cpu: "250m"
            requests:
              memory: "50Mi"
              cpu: "100m"
---
kind: Service
apiVersion: v1
metadata:
  name: unbound-service
  namespace: pihole
spec:
  selector:
    app: unbound
  type: ClusterIP
  clusterIP: 10.43.0.20
  ports:
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
