Services/02-homebridge.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homebridge
  labels:
    name: homebridge
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app: homebridge
spec:
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homebridge
          image: docker.io/oznu/homebridge:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: svc-ui
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /homebridge
              name: homebridge-root
      volumes:
        - name: homebridge-root
          persistentVolumeClaim:
            claimName: homebridge-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: homebridge-ui-svc
  namespace: homebridge
spec:
  selector:
    app: homebridge
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge-ingress
  namespace: homebridge
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/homebridge"
            backend:
              service:
                name: homebridge-ui-svc
                port:
                  number: 8080
