Services/03-deepstack.yml
apiVersion: v1
kind: Namespace
metadata:
  name: deepstack
  labels:
    name: deepstack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepstack
  namespace: deepstack
  labels:
    app: deepstack
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deepstack
  template:
    metadata:
      labels:
        app: deepstack
    spec:
      containers:
        - name: deepstack
          image: deepquestai/deepstack:arm64-2021.06.1
          ports:
            - name: svc-ui
              containerPort: 5000
          resources:
            limits:
              memory: "2Gi"
              cpu: "2"
            requests:
              memory: "800Mi"
              cpu: "1"
          volumeMounts:
            - mountPath: /datastore
              name: deepstack-datastore
            - mountPath: /modelstore/detection
              name: deepstack-modelstore
      volumes:
        - name: deepstack-datastore
          persistentVolumeClaim:
            claimName: deepstack-datastore-pvc
        - name: deepstack-modelstore
          persistentVolumeClaim:
            claimName: deepstack-modelstore-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: deepstack-svc
  namespace: deepstack
spec:
  selector:
    app: deepstack
  ports:
    - name: 5000-tcp
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepstack-ingress
  namespace: deepstack
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ${DEEPSTACK_HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: deepstack-svc
                port:
                  name: 5000-tcp
