Services/pihole.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    name: pihole
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unbound
  namespace: pihole
  labels:
    app: unbound
spec:
  serviceName: "unbound"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      containers:
        - name: unbound
          image: docker.io/mvance/unbound-rpi:latest
          ports:
            - name: svc-53-udp
              containerPort: 53
              protocol: UDP
            - name: svc-53-tcp
              containerPort: 53
              protocol: TCP
          resources:
            limits:
              memory: "1024M"
              cpu: "1"
            requests:
              memory: "50Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /opt/unbound/etc/unbound/a-records.conf
              name: unbound-a-records
              subPath: a-records.conf
      volumes:
        - name: unbound-a-records
          configMap:
            name: unbound-a-records-configmap
            items:
              - key: a-records
                path: a-records.conf
---
apiVersion: v1
kind: Service
metadata:
  name: unbound-service
  namespace: pihole
spec:
  selector:
    app: unbound
  type: ClusterIP
  clusterIP: 10.43.0.20
  ports:
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  serviceName: "pihole"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          # TODO: when the ulimit bug is fixed, upgrade to latest: https://github.com/pi-hole/docker-pi-hole/issues/772
          image: docker.io/pihole/pihole:v5.1.2
          ports:
            - name: svc-53-udp
              containerPort: 53
              protocol: UDP
            - name: svc-53-tcp
              containerPort: 53
              protocol: TCP
            - name: svc-ui
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "1024M"
              cpu: "1"
            requests:
              memory: "50Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-etc
      volumes:
        - name: pihole-etc
          persistentVolumeClaim:
            claimName: pihole-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui-svc
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: 80-tcp
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-svc
  namespace: pihole
spec:
  selector:
    app: pihole
  type: ClusterIP
  clusterIP: 10.43.0.30
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: ${CLUSTER_HOSTNETWORKINGIPADDRESS}
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: ${CLUSTER_HOSTNETWORKINGIPADDRESS}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ${PIHOLE_HOSTNAME}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-ui-svc
                port:
                  name: 80-tcp
